parser/tests/bad/ref04-1.st
% identifier '%s' has unsubscriptable type
%   compile-time constant identifier

const i := 1
const j := i[1]
